# machine-learning-zoomcamp-2025

./: .gitignore  README.md
000-midterm-project/: Dockerfile  Pipfile  README.md  features.py  load.py  main.py  predict.py  requirements.txt  test.py  train.py
000-midterm-project/data/: hdb_resale_data_2019-2023.csv
01-intro/: Homework1-2025.ipynb  Homework1.ipynb
02-regression/: Homework2.ipynb
03-classification/: Homework3.ipynb
04-evaluation/: Homework4.ipynb
05-deployment/: Dockerfile  Homework5.ipynb  Pipfile  predict-test.py  predict-testv2.py  predict.py  predictv2.py  pyproject.toml  q6_test.py
06-decisiontrees/: Homework6.ipynb
08-deeplearning/: Homework8.ipynb  requirements.txt
09-serverless/: Dockerfile  Homework9.ipynb  Pipfile
